2015-02-25  Filip Pizlo  <fpizlo@apple.com>

        Enable concurrent JIT on GTK
        https://bugs.webkit.org/show_bug.cgi?id=142007

        Reviewed by Benjamin Poulain.

        Seems weird that GTK keeps it off. No good reason for that as far as I can tell.

        * wtf/Platform.h:

2015-02-23  Brent Fulgham  <bfulgham@apple.com>

        WTF::WeakPtr should rename 'forgot' to 'clear' and support nullptr assignment
        https://bugs.webkit.org/show_bug.cgi?id=141935

        Reviewed by Myles C. Maxfield.

        * wtf/WeakPtr.h:
        (WTF::WeakPtr::operator=): Added 'nullptr_t' overload.
        (WTF::WeakPtr::clear): Renamed from 'forget'
        (WTF::WeakPtr::forget): Deleted.

2015-02-23  Brent Fulgham  <bfulgham@apple.com>

        WTF::WeakPtr should have a 'forget' method
        https://bugs.webkit.org/show_bug.cgi?id=141923

        Reviewed by Myles C. Maxfield.

        * wtf/WeakPtr.h:
        (WTF::WeakPtr::forget): Added.

2015-02-20  Geoffrey Garen  <ggaren@apple.com>

        Remove TCMalloc
        https://bugs.webkit.org/show_bug.cgi?id=141844

        Reviewed by Andreas Kling.

        It's unused.

        * WTF.vcxproj/WTF.vcxproj:
        * WTF.vcxproj/WTF.vcxproj.filters:
        * WTF.xcodeproj/project.pbxproj:
        * wtf/CMakeLists.txt:
        * wtf/FastMalloc.cpp:
        (WTF::EntropySource<4>::value): Deleted.
        (WTF::EntropySource<8>::value): Deleted.
        (WTF::internalEntropyValue): Deleted.
        (WTF::freedObjectStartPoison): Deleted.
        (WTF::freedObjectEndPoison): Deleted.
        (WTF::ClassIndex): Deleted.
        (WTF::HardenedSLL::create): Deleted.
        (WTF::HardenedSLL::null): Deleted.
        (WTF::HardenedSLL::setValue): Deleted.
        (WTF::HardenedSLL::value): Deleted.
        (WTF::HardenedSLL::operator!): Deleted.
        (WTF::HardenedSLL::operator UnspecifiedBoolType): Deleted.
        (WTF::HardenedSLL::operator!=): Deleted.
        (WTF::HardenedSLL::operator==): Deleted.